--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta property="og:description" content="Premium Nidha Dubai fabric, practical features, and timeless designs that celebrate faith and style." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://your-domain.com" />
+  <link rel="preload" as="image" href="images/hero-poster.jpg" fetchpriority="high">
   <meta property="og:image" content="https://your-domain.com/cover.jpg" />
 <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,26 +18,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
   <!-- Tailwind (CDN) -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          fontFamily: {
-            display: ['"Cormorant Garamond"', 'serif'],
-            sans: ['Inter', 'ui-sans-serif', 'system-ui']
-          },
-          colors: {
-            brand: { DEFAULT: '#0F0F10' },
-            ink: { DEFAULT: '#111213' },
-            luxe: { DEFAULT: '#C0A062' }
-          },
-          boxShadow: { soft: '0 10px 30px rgba(0,0,0,0.08)' },
-        }
-      }
-    }
-  </script>
-  <style>
+  <link rel="stylesheet" href="styles.css">
+<style>
     .reveal { opacity: 0; transform: translateY(12px); transition: opacity .6s ease, transform .6s ease; }
     .reveal.show { opacity: 1; transform: translateY(0); }
     .tap-highlight-none { -webkit-tap-highlight-color: transparent; }
@@ -56,7 +39,11 @@
         <!-- Center: logo -->
         <div class="col-span-1 flex items-center justify-center">
           <a href="#home" aria-label="Arabista Home">
-            <img src="images/logo.png" alt="Arabista logo" class="h-11 w-auto" width="1600" height="1600"/>
+            <picture>
+  <source srcset="images/logo.avif" type="image/avif">
+  <source srcset="images/logo.webp" type="image/webp">
+  <img src="images/logo.png" alt="Arabista logo" class="h-11 w-auto" width="1600" height="1600">
+</picture>
           </a>
         </div>
 
@@ -85,7 +72,7 @@
         <div class="relative">
           <video autoplay muted loop playsinline webkit-playsinline
        poster="images/hero-poster.jpg"
-       class="w-full h-[70vh] sm:h-[80vh] object-cover brightness-[.75]">
+       class="w-full h-[70vh] sm:h-[80vh] object-cover brightness-[.75]" preload="metadata">
   <source src="images/hero.mp4" type="video/mp4" />
 </video>
           <div class="absolute inset-0 bg-gradient-to-t from-brand via-transparent"></div>
@@ -112,51 +99,83 @@
     <div class="max-w-screen-xl mx-auto px-4 sm:px-6">
       <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-8 gap-3 sm:gap-6 py-6 sm:py-10">
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-fabric.png" alt="Premium Nidha Dubai fabric"
+          <picture>
+  <source srcset="images/usp-fabric.avif" type="image/avif">
+  <source srcset="images/usp-fabric.webp" type="image/webp">
+  <img src="images/usp-fabric.png" alt="Premium Nidha Dubai fabric"
      class="w-full h-24 object-cover"
      loading="lazy" decoding="async" width="600" height="600"/>
+</picture>
           <p class="p-2">Premium Nidha Dubai fabric — soft, breathable, and luxurious.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-iron.png" alt="Minimal iron"
+          <picture>
+  <source srcset="images/usp-iron.avif" type="image/avif">
+  <source srcset="images/usp-iron.webp" type="image/webp">
+  <img src="images/usp-iron.png" alt="Minimal iron"
      class="w-full h-24 object-cover"
      loading="lazy" decoding="async" width="600" height="600"/>
+</picture>
           <p class="p-2">Minimal iron — wrinkle-resistant for daily wear.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-shawl.png" alt="Complimentary chiffon silk shawl"
+          <picture>
+  <source srcset="images/usp-shawl.avif" type="image/avif">
+  <source srcset="images/usp-shawl.webp" type="image/webp">
+  <img src="images/usp-shawl.png" alt="Complimentary chiffon silk shawl"
      class="w-full h-24 object-cover"
      loading="lazy" decoding="async" width="600" height="600"/>
+</picture>
           <p class="p-2">Complimentary chiffon silk shawl (100D) with every abaya.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-zip.png" alt="10-inch front zip"
+          <picture>
+  <source srcset="images/usp-zip.avif" type="image/avif">
+  <source srcset="images/usp-zip.webp" type="image/webp">
+  <img src="images/usp-zip.png" alt="10-inch front zip"
      class="w-full h-24 object-cover"
      loading="lazy" decoding="async" width="600" height="600"/>
+</picture>
           <p class="p-2">10-inch front zip — nursing friendly.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-pocket.png" alt="Left and right pockets"
+          <picture>
+  <source srcset="images/usp-pocket.avif" type="image/avif">
+  <source srcset="images/usp-pocket.webp" type="image/webp">
+  <img src="images/usp-pocket.png" alt="Left and right pockets"
      class="w-full h-24 object-cover"
      loading="lazy" decoding="async" width="385" height="385"/>
+</picture>
           <p class="p-2">Left and right pockets — style meets function.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-inner-sleeve.png" alt="Inner sleeve lining"
+          <picture>
+  <source srcset="images/usp-inner-sleeve.avif" type="image/avif">
+  <source srcset="images/usp-inner-sleeve.webp" type="image/webp">
+  <img src="images/usp-inner-sleeve.png" alt="Inner sleeve lining"
      class="w-full h-24 object-cover"
      loading="lazy" decoding="async" width="600" height="600"/>
+</picture>
           <p class="p-2">Inner sleeve lining — wudhu’-friendly and discreet.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-box.png" alt="Premium black gift box packaging"
+          <picture>
+  <source srcset="images/usp-box.avif" type="image/avif">
+  <source srcset="images/usp-box.webp" type="image/webp">
+  <img src="images/usp-box.png" alt="Premium black gift box packaging"
      class="w-full h-24 object-cover"
      loading="lazy" decoding="async" width="600" height="600"/>
+</picture>
           <p class="p-2">Premium black gift box packaging — perfect for gifting.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-courier.png" alt="Free express courier delivery"
+          <picture>
+  <source srcset="images/usp-courier.avif" type="image/avif">
+  <source srcset="images/usp-courier.webp" type="image/webp">
+  <img src="images/usp-courier.png" alt="Free express courier delivery"
      class="w-full h-24 object-cover"
      loading="lazy" decoding="async" width="1024" height="1024"/>
+</picture>
           <p class="p-2">Free express courier delivery nationwide — 1–3 business days.</p>
         </div>
       </div>
@@ -180,7 +199,7 @@
         <article class="group overflow-hidden rounded-2xl border border-white/10 hover:border-white/20 transition">
           <div class="aspect-[3/4] overflow-hidden">
             <picture>
-  <source srcset="images/product-dahlia.avif" type="image/avif">
+<source srcset="images/product-dahlia.avif" type="image/avif">
   <source srcset="images/product-dahlia.webp" type="image/webp">
   <img src="images/product-dahlia.png" alt="Dahlia Series" class="w-full h-full object-cover group-hover:scale-105 transition duration-500" loading="lazy" decoding="async" width="864" height="1184">
 </picture>
@@ -199,7 +218,7 @@
         <article class="group overflow-hidden rounded-2xl border border-white/10 hover:border-white/20 transition">
           <div class="aspect-[3/4] overflow-hidden">
             <picture>
-  <source srcset="images/product-zahra.avif" type="image/avif">
+<source srcset="images/product-zahra.avif" type="image/avif">
   <source srcset="images/product-zahra.webp" type="image/webp">
   <img src="images/product-zahra.png" alt="Zahra Series" class="w-full h-full object-cover group-hover:scale-105 transition duration-500" loading="lazy" decoding="async" width="864" height="1184">
 </picture>
@@ -218,7 +237,7 @@
         <article class="group overflow-hidden rounded-2xl border border-white/10 hover:border-white/20 transition">
           <div class="aspect-[3/4] overflow-hidden">
             <picture>
-  <source srcset="images/product-warda.avif" type="image/avif">
+<source srcset="images/product-warda.avif" type="image/avif">
   <source srcset="images/product-warda.webp" type="image/webp">
   <img src="images/product-warda.png" alt="Warda Series" class="w-full h-full object-cover group-hover:scale-105 transition duration-500" loading="lazy" decoding="async" width="864" height="1184">
 </picture>
@@ -237,7 +256,7 @@
         <article class="group overflow-hidden rounded-2xl border border-white/10 hover:border-white/20 transition">
           <div class="aspect-[3/4] overflow-hidden">
             <picture>
-  <source srcset="images/product-maraya.avif" type="image/avif">
+<source srcset="images/product-maraya.avif" type="image/avif">
   <source srcset="images/product-maraya.webp" type="image/webp">
   <img src="images/product-maraya.png" alt="Maraya Series" class="w-full h-full object-cover group-hover:scale-105 transition duration-500" loading="lazy" decoding="async" width="864" height="1184">
 </picture>
@@ -272,7 +291,7 @@
         </div>
         <div class="overflow-hidden rounded-2xl shadow-soft">
           <picture>
-  <source srcset="images/about-story.avif" type="image/avif">
+<source srcset="images/about-story.avif" type="image/avif">
   <source srcset="images/about-story.webp" type="image/webp">
   <img src="images/about-story.png" alt="Arabista craftsmanship" class="w-full h-full object-cover" loading="lazy" decoding="async" width="1344" height="768">
 </picture>
@@ -285,7 +304,7 @@
   <section id="contact" class="relative reveal mt-6">
     <div class="absolute inset-0">
       <picture>
-  <source srcset="images/contact-whatsapp.avif" type="image/avif">
+<source srcset="images/contact-whatsapp.avif" type="image/avif">
   <source srcset="images/contact-whatsapp.webp" type="image/webp">
   <img src="images/contact-whatsapp.png" alt="Contact Arabista on WhatsApp" class="w-full h-full object-cover brightness-50 blur-sm" loading="lazy" decoding="async" width="1024" height="1024">
 </picture>
